# DarkCore-Manager

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
manager/: Cargo.toml  build.rs  pack_release.ps1  release_profile_fragment.toml
manager/src/: api.rs  app_list.rs  cache.rs  config.rs  downloader.rs  game_path.rs  injector.rs  main.rs  matrix.rs  profiles.rs  steamless.rs  ui.rs  vault.rs  vdf_injector.rs
src/: api.rs  app_list.rs  cache.rs  main.rs  steamless.rs  ui.rs
titan_hook/: Cargo.toml  build.rs
titan_hook/src/: lib.rs
titan_hook/src/hooks/: steam_api.rs
titan_hook/src/interfaces/: mod.rs  remote_storage.rs  user_stats.rs
