[package]
name = "darkcore-greenluma"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
regex = "1.10"
walkdir = "2.4"
open = "5.0"
directories = "5.0"
rfd = "0.12" # Native file dialogs
hex = "0.4"
lazy_static = "1.4"
glob = "0.3"
bytes = "1.5"
egui_extras = { version = "0.29", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }

[build-dependencies]
winres = "0.1"
