[workspace]
members = [
    "manager",
    "titan_hook",
]
resolver = "2"

[workspace.package]
version = "1.4.0"
edition = "2021"
authors = ["Team DarkCore"]

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization.
codegen-units = 1 # Maximum optimization (slower build).
# panic = "abort" # Commented out for debugging
