[package]
name = "darkcore-manager"
version = "1.5.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
reqwest = { version = "0.11", features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6"
regex = "1.10"
walkdir = "2.4"
open = "5.0"
directories = "5.0"
rfd = "0.12"
hex = "0.4"
lazy_static = "1.4"
glob = "0.3"
bytes = "1.5"
egui_extras = { version = "0.29", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }
rodio = "0.17"
sysinfo = "0.30"
chrono = "0.4"
futures = "0.3"
# Tactical Mk3 Dependencies
aes = "0.8"
cbc = "0.1"
ecb = "0.1"
cipher = "0.4"
lzma-rs = "0.3"
sha1 = "0.10"
crc32fast = "1.3"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
] }

[build-dependencies]
winres = "0.1"

