[package]
name = "titan_hook"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging", 
] }
minhook = "0.4"
once_cell = "1.19"
log = "0.4"
simplelog = "0.12"
directories = "6.0.0"
